fix: bg home 100%, change body color, better footer alignment, better alignment on team section on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+
+    * {
+        @apply font-poppins
+    }
+    
+    body {
+        @apply bg-slate-100
+    }
+}
